# maria_estupinan_proyecto1

./: .gitignore  README.md  pyproject.toml
Codigo/: Cuaderno_ETL.ipynb
Documentacion/: adquisiciondatos.ipynb
app/: contratos.py
